--- a/src/components/projects/ProjectsPage.css
+++ b/src/components/projects/ProjectsPage.css
@@ -1,3 +1,15 @@
-.see-more:hover {
-    background-color: #fbfafa;
+.show-more {
+    font-family: 'Inconsolata', monospace;
+    background-color: white;
+    border: solid 1px #828282;
+    border-radius: 5px;
+}
+
+.show-more:hover {
+    cursor: pointer;
+    color: gray;
+}
+
+.show-more:focus {
+    outline: none;
 }
