--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html,
 body {
     font-family: 'Inconsolata', monospace;
+    min-height: 100%;
+    min-width: 100%;
+    margin: 0;
+}
+
+h3 {
+    margin: 0;
 }
