--- a/src/components/commons/repository/Repository.css
+++ b/src/components/commons/repository/Repository.css
@@ -1,79 +1,3 @@
-.repository-stats {
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-}
-
-.stat {
-    margin-right: 20px;
-    margin-bottom: 5px;
-}
-
-.stat-count {
-    margin-left: 5px;
-}
-
-.repository-card {
-    min-height: 200px;
-    height: 100%;
-    display: grid;
-    grid-template-areas: 'name' 'description' 'stats';
-    grid-template-rows: auto 1fr auto;
-    border-radius: 4px;
-    padding: 20px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    background: #ffffff;
-}
-
-.repository-card:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-.fa-star {
-    color: #ffeb3b;
-}
-
-.fa-exclamation-circle {
-    color: #f59211;
-}
-
-.fa-code-branch {
-    color: #1eb7c2;
-}
-
-.fa-utensils {
-    color: #750dec;
-}
-
-a:link {
-    text-decoration: none;
-    color: unset;
-}
-
-a:visited {
-    color: unset;
-}
-
-.repository-name {
-    grid-area: name;
-    word-break: break-all;
-}
-
-.repository-name,
-.stat-count {
-    color: #383838;
-}
-
-.repository-description {
-    grid-area: description;
-    color: #575757;
-}
-
-.repository-stats {
-    grid-area: stats;
-}
-
 .repository-grid {
     display: grid;
     grid-gap: 15px;
@@ -102,4 +26,77 @@ a:visited {
     .repository-grid {
         grid-template-columns: repeat(1, 1fr);
     }
+}
+
+.repository-card {
+    min-height: 200px;
+    height: 100%;
+    display: grid;
+    grid-template-areas: 'name' 'description' 'stats';
+    grid-template-rows: auto 1fr auto;
+    border-radius: 4px;
+    padding: 20px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    background: #ffffff;
+}
+
+.repository-card:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.repository-name {
+    grid-area: name;
+    word-break: break-all;
+}
+
+.repository-name,
+.stat-count {
+    color: #2b2b2b;
+}
+
+.repository-description {
+    grid-area: description;
+    color: #575757;
+}
+
+.repository-stats {
+    grid-area: stats;
+}
+
+.repository-stats {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.stat {
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
+
+.stat-count {
+    margin-left: 5px;
+}
+
+.fa-star {
+    color: #ffeb3b;
+}
+
+.fa-exclamation-circle {
+    color: #f59211;
+}
+
+.fa-code-branch {
+    color: #1eb7c2;
+}
+
+.fa-utensils {
+    color: #750dec;
+}
+
+a:link,
+a:visited {
+    text-decoration: none;
+    color: unset;
 }
