--- a/src/components/commons/header/Header.css
+++ b/src/components/commons/header/Header.css
@@ -1,20 +1,38 @@
 .header {
-    width: 80vw;
-    margin: auto;
-    margin-top: 30px;
+    width: 100%;
     margin-bottom: 40px;
+    background-color: #3ab7f1;
+    color: #ffffff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    display: flex;
+    justify-content: center;
 }
 
-.link {
-    color: black;
-    text-decoration: none;
+.header-content {
+    display: flex;
+    width: 80vw;
+    padding: 20px 0 20px 0;
+    align-items: center;
 }
 
-.link:hover {
-    color: gray;
+.nav-option {
+    margin: 0;
+    margin-right: 0;
+    width: fit-content;
 }
 
-.nav-link a {
-    text-align: right;
-    margin-left: 30px;
+.nav-option + .nav-option {
+    margin-left: 20px;
+}
+
+.nav-brand {
+    margin: 0;
+    margin-right: auto;
+    width: fit-content;
+}
+
+.nav-brand img {
+    width: 100px;
+    height: auto;
+    filter: brightness(0) invert(1);
 }
