Set header at the top of page and correct its distance from the content

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -6,3 +6,13 @@
 .footer {
     margin-top: 40px;
 }
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.sticky + .content {
+    padding-top: calc(100px + 5vw);
+}
