--- a/src/components/commons/header/Header.css
+++ b/src/components/commons/header/Header.css
@@ -2,7 +2,9 @@
     width: 100%;
     background-color: #3ab7f1;
     color: #ffffff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+        0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 10px 0px rgba(0, 0, 0, 0.12);
     display: flex;
     justify-content: center;
 }
