--- a/src/components/projects/ProjectsPage.css
+++ b/src/components/projects/ProjectsPage.css
@@ -11,7 +11,9 @@
     width: 200px;
     max-width: 100%;
     margin-bottom: 40px;
-    box-shadow: 0 1px 4px #9e9e9e;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+        0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+        0px 3px 1px -2px rgba(0, 0, 0, 0.12);
 }
 
 .show-more-btn:hover {
