--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -7,12 +7,6 @@
     margin-top: 40px;
 }
 
-.sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.sticky + .content {
+.header + .content {
     padding-top: calc(100px + 5vw);
 }
