Change font family

--- a/src/components/projects/ProjectsPage.css
+++ b/src/components/projects/ProjectsPage.css
@@ -4,7 +4,7 @@
 }
 
 .show-more-btn {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Lato', monospace;
     background-color: #21d6a0;
     border-width: 0;
     border-radius: 5px;
