--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html,
 body {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Lato', monospace;
     min-height: 100%;
     min-width: 100%;
     margin: 0;
