--- a/src/components/commons/header/Header.css
+++ b/src/components/commons/header/Header.css
@@ -29,10 +29,11 @@
 
 .nav-option:hover {
     color: #1c5975;
+    transition: color 0.3s ease-out;
 }
 
 .nav-option + .nav-option {
-    margin-left: 20px;
+    margin-left: 40px;
 }
 
 @media (max-width: 500px) {
