--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,17 +1,27 @@
+/**
+ * App.css
+ *
+ * These are the styles for the app component.
+ * The component consists of two parts:
+ * - Header
+ * - Content
+ */
+
 .content {
     width: 80vw;
     margin: auto;
 }
 
-.footer {
-    margin-top: 40px;
-}
-
+/** 
+ * Defines the distance between the header and the content.
+ * The distance is applied to screens of at least 600px.
+ */
 .header + .content {
     padding-top: calc(100px + 5vw);
 }
 
-@media (max-width: 500px) {
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
     .header + .content {
         padding-top: calc(180px + 5vw);
     }
