--- a/src/components/commons/repository/Repository.css
+++ b/src/components/commons/repository/Repository.css
@@ -51,7 +51,7 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .repository-grid {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
@@ -75,6 +75,7 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     background: #ffffff;
+    justify-items: center;
 }
 
 .repository-card:hover {
@@ -99,6 +100,7 @@ h3.repository-name {
     grid-area: description;
     color: #444444;
     letter-spacing: 0.7px;
+    text-align: justify;
 }
 
 .repository-stats {
@@ -106,6 +108,7 @@ h3.repository-name {
     display: flex;
     width: 100%;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .stat {
