Posiciona itens do menu lado a lado no mobile

--- a/src/components/commons/header/Header.css
+++ b/src/components/commons/header/Header.css
@@ -100,3 +100,18 @@
         width: 70px;
     }
 }
+
+/**
+ * Wrapper Nav Options
+ *
+ * Defines the position of the navigation links.
+ */
+
+.wrapper-nav-options {
+    align-items: baseline;
+    display: flex;
+}
+
+.wrapper-nav-options .nav-option:nth-child(n + 2) {
+    margin-left: 10px;
+}
