Adiciona gif de loading

--- a/src/components/projects/ProjectsPage.css
+++ b/src/components/projects/ProjectsPage.css
@@ -25,6 +25,7 @@
     border-width: 0;
     border-radius: 5px;
     width: 200px;
+    height: 50px;
     max-width: 100%;
     margin-bottom: 40px;
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
@@ -43,4 +44,7 @@
 
 .show-more-btn-text {
     color: #ffffff;
+}
+.show-more-btn-text {
+    margin: 0 auto;
 }
