--- a/src/components/commons/repository/Repository.css
+++ b/src/components/commons/repository/Repository.css
@@ -68,22 +68,34 @@
     min-height: 200px;
     height: 100%;
     display: grid;
-    grid-template-areas: 'name' 'description' 'stats';
+    grid-template-areas: 'header' 'description' 'stats';
     grid-template-rows: auto 1fr auto;
     border-radius: 4px;
     padding: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
     background: #ffffff;
-    justify-items: center;
 }
 
 .repository-card:hover {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15), 0 6px 6px rgba(0, 0, 0, 0.2);
 }
 
+.repository-header {
+    grid-area: header;
+    text-align: left;
+}
+
+h2,
+h6 {
+    margin: 0;
+    padding: 0;
+}
+
 .repository-name {
-    grid-area: name;
+    font-weight: bold;
+    font-family: Open Sans;
+    color: #72a1d6;
     word-break: break-all;
 }
 
@@ -91,14 +103,14 @@ h3.repository-name {
     margin: 0;
 }
 
-.repository-name,
 .stat-count {
-    color: #2b2b2b;
+    color: #777777;
 }
 
 .repository-description {
     grid-area: description;
-    color: #444444;
+    color: #777777;
+    margin-top: 12px;
     letter-spacing: 0.7px;
     text-align: justify;
 }
@@ -112,29 +124,32 @@ h3.repository-name {
 }
 
 .stat {
-    margin-right: 20px;
-    margin-bottom: 5px;
-    color: #242424;
+    display: flex;
+    color: #777777;
+    align-items: center;
 }
-
+.stat i {
+    display: inline-block;
+    height: 20px;
+}
 .stat-count {
     margin-left: 5px;
 }
 
-.fa-star:hover {
-    color: #ffeb3b;
+.fa-star {
+    content: url('../../../../assets/star.png');
 }
 
-.fa-exclamation-circle:hover {
-    color: #f59211;
+.fa-exclamation-circle {
+    content: url('../../../../assets/issue.png');
 }
 
-.fa-code-branch:hover {
-    color: #1eb7c2;
+.fa-code-branch {
+    content: url('../../../../assets/pull-request.png');
 }
 
-.fa-utensils:hover {
-    color: #750dec;
+.fa-utensils {
+    content: url('../../../../assets/fork.png');
 }
 
 a:link,
