--- a/src/components/commons/header/Header.css
+++ b/src/components/commons/header/Header.css
@@ -14,6 +14,7 @@
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
+    z-index: 1;
 }
 
 /* Class used to keep the header at the top of the page even when it is rolled */
