--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -12,17 +12,17 @@
     margin: auto;
 }
 
-/** 
+/**
  * Defines the distance between the header and the content.
  * The distance is applied to screens of at least 600px.
  */
 .header + .content {
-    padding-top: calc(100px + 5vw);
+    padding-top: 100px;
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .header + .content {
-        padding-top: calc(180px + 5vw);
+        padding-top: calc(180px);
     }
 }
