--- a/src/pages/home/homePage.css
+++ b/src/pages/home/homePage.css
@@ -12,7 +12,7 @@
   display: block;
   margin: auto;
   height: 100%;
-  background-image: url('../../../assets/loader.gif');
+  /* background-image: url('../../../assets/loader.gif'); */
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
